<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.maxbill</groupId>
    <artifactId>RedisPlus</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>RedisPlus</name>
    <description>RedisPlus project for Spring Boot</description>

    <!--开发者信息-->
    <developers>
        <developer>
            <name>MaxBill</name>
            <email>maxbill1993@163.com</email>
            <url>https://my.oschina.net/zss1993</url>
        </developer>
    </developers>

    <!--开源协议-->
    <licenses>
        <license>
            <name>GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007</name>
            <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
        </license>
    </licenses>

    <!--父级项目依赖-->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.0.4.RELEASE</version>
        <!-- lookup parent from repository -->
        <relativePath/>
    </parent>

    <!--属性信息配置-->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
    </properties>


    <dependencies>
        <!--web启动器依赖-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <!--移除默认启动容器-->
            <!--
            <exclusions>
                <exclusion>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                    <groupId>org.springframework.boot</groupId>
                </exclusion>
            </exclusions>
            -->
        </dependency>
        <!--jetty容器-->
        <!--
        <dependency>
            <artifactId>spring-boot-starter-jetty</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        -->
        <!--undertow容器-->
        <!--
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-undertow</artifactId>
        </dependency>
        -->
        <!--模板引擎依赖-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-freemarker</artifactId>
        </dependency>
        <!--切面编程依赖-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <!--actuator依赖包-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <!--mybatis依赖-->
        <dependency>
            <groupId>org.mybatis.spring.boot</groupId>
            <artifactId>mybatis-spring-boot-starter</artifactId>
            <version>1.3.0</version>
        </dependency>
        <!--开发工具依赖-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
        </dependency>
        <!--lombok插件-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <!--fastjson依赖-->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.15</version>
        </dependency>
        <!--derby内嵌数据库依赖-->
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derby</artifactId>
            <version>10.13.1.1</version>
        </dependency>
        <!--druid数据源依赖-->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid</artifactId>
            <version>1.0.31</version>
        </dependency>
        <!--Redis依赖-->
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>2.9.0</version>
        </dependency>
        <!--邮件依赖 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>
        <!--jsch依赖-->
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jsch</artifactId>
            <version>0.1.54</version>
        </dependency>
        <!--log4j依赖-->
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <!--单元测试依赖-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!--编译插件配置-->
        <plugins>
            <!--maven application package-->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <!--javafx application package-->
            <plugin>
                <groupId>com.zenjava</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>8.8.3</version>
                <configuration>
                    <!--启动类-->
                    <mainClass>com.maxbill.MainApplication</mainClass>
                    <!--运行文件名-->
                    <appName>RedisPlus</appName>
                    <!--启用自定义打包配置-->
                    <verbose>true</verbose>
                    <!--菜单-->
                    <needMenu>true</needMenu>
                    <!--桌面图标-->
                    <needShortcut>true</needShortcut>
                    <!--JVM参数-->
                    <jvmArgs>
                        <jvmArg>-Xms256M</jvmArg>
                        <jvmArg>-Xmx512M</jvmArg>
                        <jvmArg>-XX:MaxPermSize=512M</jvmArg>
                        <jvmArg>-XX:-UseGCOverheadLimit</jvmArg>
                        <jvmArg>-Dvisualvm.display.name=RedisPlus</jvmArg>
                    </jvmArgs>
                    <!--安装配置项-->
                    <bundleArguments>
                        <installdirChooser>true</installdirChooser>
                    </bundleArguments>
                    <!--供应商-->
                    <vendor>MaxBill</vendor>
                    <!--版本信息-->
                    <nativeReleaseVersion>v1.1.0</nativeReleaseVersion>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
